--- a/style.css
+++ b/style.css
@@ -1,36 +1,43 @@
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: 'Roboto', sans-serif;
+  font-weight: bold;
   color:#E1E1E6;
+  font-size: 2rem;
 }
-
 :root {
   --hue: 240;
-  --bg-color: hsl(0, 0%, 9%);
+  --bg-color: hsl(0, 0%, 0%);
   --ff-color: hsl(var(--hue), 9%, 89%);
   font-size: 62.5%;
 }
-
 body {
   background: var(--bg-color);
 }
-
 .main{
   padding: 11.5rem 16rem;
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 8.7rem;
 }
-
+button {
+	background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
 header {
+  width: 100%;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
-
 #logo{
   width: 18.628rem;
   height: 3.275rem;
@@ -38,28 +45,68 @@ header {
 .inputSect{
   display: flex;
   border-radius: 8px;
+  gap: 8px;
 }
 #userInput{
   height: 4.8rem;
   width: 46.2rem;
+  padding: 1.6rem;
   background: #06181C;
-
+  border: unset;
+  border-radius: 5px;
+  font-size: 1.6rem;
+}
+#addBtn{
+  border-radius: 5px;
+}
+.tableContainer{
+  overflow: hidden;
+  border: 1px #4A808C solid;
+  border-radius: 1.2rem;
+  width: fit-content;
+}
+table{
+  border-collapse: collapse;
+  width: 112rem;
+}
+th, td{
+  align-items: center;
+  padding: 1.6rem 5.3rem 2.4rem 4rem;
+}
+tbody{
+  overflow-y: scroll;
+  max-height: 500px;
 }
 
-table{
-  border: 1px #4A808C solid;
+
+tbody::-webkit-scrollbar {
+  width: 6px;
+  padding-right: 5px
+}
+
+::-webkit-scrollbar-thumb {
+  background: #4A808C; 
   border-radius: 10px;
 }
-/* tbody{
-  
-  // overflow-y: scroll; 
-} */
 
-.followers{
-  background: none;
-  font-size: 10px;
+
+
+tbody tr{
+  border-bottom: #4A808C 1px solid;
 }
-
+tbody tr:last-child{
+  border-bottom: unset
+}
+thead {
+  background: #092D38;
+  text-align: left;
+}
+tbody tr:nth-child(even) {
+  background: #06181C;
+}
+tbody tr:nth-child(odd) {
+  background: #06161B80;
+}
 #addBtn{
   display: flex;
   flex-direction: row;
@@ -68,21 +115,31 @@ table{
   gap: 8px;
   padding: 1.2rem 3.2rem;
   background-color: #065E7C;
-
-  font-weight: 700;
   font-size: 14px;
-  
 }
-
 .userInfo{
   display: flex;
   font-size: 1.8rem;
+  
+  align-items: center;
 }
-
 .userLogo{
   width: 5.6rem;
   height: 5.6rem;
-
   border-radius: 50%;
-
+  margin-right: 1.6rem;
 }
+.userInfo a{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  
+  text-decoration: none;
+}
+.userInfo span{
+  font-weight: 100;
+}
+#deleteUserBtn{
+  color: #F75A68;
+}
+
